fix date size on small devices

--- a/css/content.css
+++ b/css/content.css
@@ -17,7 +17,7 @@
   position: absolute;
   bottom: 0;
   right: 4px;
-  font-size: smaller;
+  font-size: 0.8vw;
   text-shadow: 1px 1px 1px #dab993;
 }
 
